fix(views): <pre> breaks in the middle of words

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -10,4 +10,8 @@ body, pre {
 pre {
   background-color: #FFF;
   border: 0px solid #FFF;
+
+  white-space: pre-wrap;
+  word-wrap: break-word;
+  word-break: break-word;
 }
